[package]
name = "uisp_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.7"
serde = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest =  { version = "0.11", features = [ "json" ] }
